# Verifiable-Federated-Intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: README.md  download_dataset.py  graph_features.py  hybrid_balance.py  partition.py  preprocess.py  temporal_bipartite_graph.py
docs/: milestone_10_percent_report.md  preprocessing_rubric.md  smote_experimentation_update.md  sprint_1_summary.md
evaluation/: plots.py  temp_generate_plots.py
fl_implementation/: Commands to run  Dockerfile.client  Dockerfile.server  client.py  docker-compose.yml  server.py  split_into_banks.py
models/: graph_encoder.py  mlp.py  pca_reducer.py
